# streamr

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  environments.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-gh-pages.yml
contracts/streamer/: Cargo.toml
contracts/streamer/src/: lib.rs
src/: App.module.css  App.tsx  index.css  main.tsx  theme.css
src/components/: ConnectAccount.css  ConnectAccount.tsx  DashboardLink.css  DashboardLink.tsx  FundAccountButton.tsx  ProtectedRoute.tsx  SimpleHeroSection.tsx  WalletButton.css  WalletButton.tsx  navbar.css
src/components/dashboard/: DashboardLayout.tsx  EmptyState.tsx  Sidebar.tsx  StatCard.tsx  StatsCard.tsx  StreamCard.tsx  StreamDetailsModal.tsx  StreamDetailsPanel.tsx  SubscriptionCard.tsx  dashboard-components.css  dashboard.css
src/components/home/: FeatureCard.tsx  HeroSection.tsx  HowItWorks.tsx  StatsSection.tsx  hero.css  home.css
src/components/layout/: Box.tsx
src/components/theme/: README.md  ThemeProvider.tsx
src/contracts/: streamer.ts  tokens.ts  util.ts
src/hooks/: useStreamerContract.ts  useStreams.ts  useSubscription.ts  useSubscriptions.ts
src/pages/: Home.tsx  LoginRequired.tsx  NotFound.tsx  login-required.css  not-found.css
src/pages/dashboard/: CreateStream.tsx  CreateSubscription.tsx  Dashboard.tsx  MyStreams.tsx  StreamDetails.tsx  dashboard.css  (+7 more)
src/providers/: NotificationProvider.tsx  WalletProvider.tsx
src/styles/: form-input-overrides.css  modal-overrides.css
src/util/: token.ts  wallet.ts
